Provide UI for allowing local network access while connected
Fixes: #117
Signed-off-by: Simon Rozman <simon@rozman.si>

--- a/LetsConnect.Client/app.config
+++ b/LetsConnect.Client/app.config
@@ -138,6 +138,13 @@
             <setting name="OpenVPNForceTCP" serializeAs="String">
                 <value>False</value>
             </setting>
+
+            <!--
+                Allow local traffic.
+            -->
+            <setting name="OpenVPNAllowLocal" serializeAs="String">
+                <value>False</value>
+            </setting>
         </eduVPN.Properties.Settings>
         <eduVPN.Views.Properties.Settings>
             <!--
