--- a/eduVPN/app.config
+++ b/eduVPN/app.config
@@ -128,6 +128,13 @@
             <setting name="OpenVPNForceTCP" serializeAs="String">
                 <value>False</value>
             </setting>
+
+            <!--
+                Allow local traffic.
+            -->
+            <setting name="OpenVPNAllowLocal" serializeAs="String">
+                <value>False</value>
+            </setting>
         </eduVPN.Properties.Settings>
     </userSettings>
 </configuration>
